correct spacing issue

--- a/src/components/Events/Fall_GM/style.scss
+++ b/src/components/Events/Fall_GM/style.scss
@@ -136,7 +136,7 @@
           .timestamps{
             margin: 0px;
             padding-top: 3px;
-            min-width: 105px;
+            min-width: 125px;
             white-space: nowrap;
           }
           .row-description-wrapper{
